--- a/notebooks/alibabacloud-ai-search/inference-alibabacloud-ai-search.ipynb
+++ b/notebooks/alibabacloud-ai-search/inference-alibabacloud-ai-search.ipynb
@@ -87,16 +87,16 @@
     "\n",
     "ELASTIC_PASSWORD = getpass(\"ELASTIC PASSWORD: \")\n",
     "\n",
-    "# e.g. \n",
+    "# e.g.\n",
     "# hosts = \"http://es-xxx.elasticsearch.aliyuncs.com:9200\"\n",
-    "hosts=getpass(\"Host: \")\n",
+    "hosts = getpass(\"Host: \")\n",
     "\n",
     "# Create the client instance\n",
     "client = Elasticsearch(\n",
     "    # For local development\n",
     "    # hosts=[\"http://localhost:9200\"]\n",
     "    hosts,\n",
-    "    basic_auth=(ELASTIC_USER, ELASTIC_PASSWORD)\n",
+    "    basic_auth=(ELASTIC_USER, ELASTIC_PASSWORD),\n",
     ")"
    ]
   },
@@ -146,12 +146,12 @@
     "API_KEY = getpass(\"Enter AlibabaCloud AI Search API key:  \")\n",
     "\n",
     "# Please enter your AlibabaCloud AI Search host here\n",
-    "# e.g. \n",
+    "# e.g.\n",
     "# HOST = \"default-xxx.opensearch.aliyuncs.com\"\n",
     "HOST = \"\"\n",
     "\n",
     "# Please enter your AlibabaCloud AI Search workspace name here\n",
-    "# e.g. \n",
+    "# e.g.\n",
     "# WORKSPACE = \"default\"\n",
     "WORKSPACE = \"\"\n",
     "\n",
@@ -163,9 +163,9 @@
     "        \"service_settings\": {\n",
     "            \"api_key\": API_KEY,\n",
     "            \"service_id\": \"ops-text-embedding-001\",\n",
-    "            \"host\" : HOST,\n",
-    "            \"workspace\" : WORKSPACE\n",
-    "        }\n",
+    "            \"host\": HOST,\n",
+    "            \"workspace\": WORKSPACE,\n",
+    "        },\n",
     "    },\n",
     ")\n",
     "\n",
@@ -177,9 +177,9 @@
     "        \"service_settings\": {\n",
     "            \"api_key\": API_KEY,\n",
     "            \"service_id\": \"ops-text-sparse-embedding-001\",\n",
-    "            \"host\" : HOST,\n",
-    "            \"workspace\" : WORKSPACE\n",
-    "        }\n",
+    "            \"host\": HOST,\n",
+    "            \"workspace\": WORKSPACE,\n",
+    "        },\n",
     "    },\n",
     ")"
    ]
@@ -231,7 +231,7 @@
     "                    \"output_field\": \"plot_sparse_embedding\",\n",
     "                },\n",
     "            }\n",
-    "        }\n",
+    "        },\n",
     "    ],\n",
     ")"
    ]
@@ -277,21 +277,17 @@
     }
    ],
    "source": [
-    "client.indices.delete(index=\"alibaba-text-embeddings-notebook-test\", ignore_unavailable=True)\n",
+    "client.indices.delete(\n",
+    "    index=\"alibaba-text-embeddings-notebook-test\", ignore_unavailable=True\n",
+    ")\n",
     "client.indices.create(\n",
     "    index=\"alibaba-text-embeddings-notebook-test\",\n",
     "    settings={\"index\": {\"default_pipeline\": \"alibaba-embeddings-notebook-test\"}},\n",
     "    mappings={\n",
     "        \"properties\": {\n",
     "            \"plot\": {\"type\": \"text\"},\n",
-    "            \"plot_embedding\": {\n",
-    "                \"type\": \"dense_vector\",\n",
-    "                \"dims\": 1536,\n",
-    "                \"index\": \"true\"\n",
-    "            },\n",
-    "            \"plot_sparse_embedding\": {\n",
-    "                \"type\":\"sparse_vector\"\n",
-    "            }\n",
+    "            \"plot_embedding\": {\"type\": \"dense_vector\", \"dims\": 1536, \"index\": \"true\"},\n",
+    "            \"plot_sparse_embedding\": {\"type\": \"sparse_vector\"},\n",
     "        }\n",
     "    },\n",
     ")"
@@ -437,10 +433,10 @@
     "    query={\n",
     "        \"sparse_vector\": {\n",
     "            \"field\": \"plot_sparse_embedding\",\n",
-    "            \"inference_id\":\"os-sparse-embeddings-notebook-test\",\n",
-    "            \"query\":\"crime dynasty\"\n",
+    "            \"inference_id\": \"os-sparse-embeddings-notebook-test\",\n",
+    "            \"query\": \"crime dynasty\",\n",
     "        }\n",
-    "    }\n",
+    "    },\n",
     ")\n",
     "\n",
     "for hit in response[\"hits\"][\"hits\"]:\n",
