ending file blank lines

--- a/supporting-blog-content/navigating-an-elastic-vector-database/notebooks/query_examples.ipynb
+++ b/supporting-blog-content/navigating-an-elastic-vector-database/notebooks/query_examples.ipynb
@@ -61,7 +61,7 @@
     "    api_key=cloud_api_key,\n",
     ")\n",
     "\n",
-    "query_string = \"Dinosaurs are still alive\""
+    "query_string = \"Dinosaurs are still alive\"\n"
    ]
   },
   {
@@ -115,7 +115,7 @@
     "        },\n",
     "    )\n",
     "\n",
-    "print_results(vector_search_result)"
+    "print_results(vector_search_result)\n"
    ]
   },
   {
@@ -146,7 +146,7 @@
     "        \n",
     "    )\n",
     "\n",
-    "print_results(bm25_result)"
+    "print_results(bm25_result)\n"
    ]
   },
   {
@@ -192,7 +192,7 @@
     "    },\n",
     ")\n",
     "\n",
-    "print_results(hybrid_search_result)"
+    "print_results(hybrid_search_result)\n"
    ]
   }
  ],
