ran through black jupyter

--- a/supporting-blog-content/navigating-an-elastic-vector-database/notebooks/local_embedding_example.ipynb
+++ b/supporting-blog-content/navigating-an-elastic-vector-database/notebooks/local_embedding_example.ipynb
@@ -34,7 +34,7 @@
     "from elasticsearch import Elasticsearch, helpers\n",
     "from sentence_transformers import SentenceTransformer\n",
     "\n",
-    "model = SentenceTransformer(\"sentence-transformers/msmarco-MiniLM-L-12-v3\")\n"
+    "model = SentenceTransformer(\"sentence-transformers/msmarco-MiniLM-L-12-v3\")"
    ]
   },
   {
@@ -55,7 +55,7 @@
    "source": [
     "cloud_endpoint = getpass(\"Elastic deployment Cloud Endpoint: \")\n",
     "cloud_api_key = getpass(\"Elastic deployment API Key: \")\n",
-    "INDEX_NAME = 'books-local'\n",
+    "INDEX_NAME = \"books-local\"\n",
     "\n",
     "es = Elasticsearch(\n",
     "    hosts=cloud_endpoint,\n",
@@ -119,12 +119,12 @@
     "# write the embedded books to a new json array of documents\n",
     "output_file = \"../data/small_books_embedded.json\"\n",
     "with open(output_file, \"w\") as file:\n",
-    "    file.write('[')\n",
+    "    file.write(\"[\")\n",
     "    for i, book in enumerate(books):\n",
     "        json.dump(book, file)\n",
     "        if i != len(books) - 1:\n",
-    "            file.write(',')                  \n",
-    "    file.write(']')\n",
+    "            file.write(\",\")\n",
+    "    file.write(\"]\")\n",
     "print(f\"{len(books)} embedded books saved to file: {output_file}.\")"
    ]
   },
@@ -144,6 +144,7 @@
    "outputs": [],
    "source": [
     "import pprint\n",
+    "\n",
     "pp = pprint.PrettyPrinter(indent=2)\n",
     "\n",
     "with open(output_file, \"r\") as file:\n",
@@ -179,10 +180,7 @@
     "            \"genres\": {\"type\": \"keyword\"},\n",
     "            \"year_published\": {\"type\": \"integer\"},\n",
     "            \"url\": {\"type\": \"text\"},\n",
-    "            \"description_embedding\" : {\n",
-    "                \"type\": \"dense_vector\",\n",
-    "                \"dims\": 384\n",
-    "            }\n",
+    "            \"description_embedding\": {\"type\": \"dense_vector\", \"dims\": 384},\n",
     "        }\n",
     "    }\n",
     "}\n",
@@ -208,7 +206,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path=\"../data/small_books_embedded.json\"\n",
+    "file_path = \"../data/small_books_embedded.json\"\n",
     "with open(file_path, \"r\") as file:\n",
     "    books = json.load(file)\n",
     "\n",
@@ -241,7 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('../data/one_book_embedded.json', \"r\") as file:\n",
+    "with open(\"../data/one_book_embedded.json\", \"r\") as file:\n",
     "    book = json.load(file)"
    ]
   },
