--- a/supporting-blog-content/navigating-an-elastic-vector-database/notebooks/pipeline-inference-example.ipynb
+++ b/supporting-blog-content/navigating-an-elastic-vector-database/notebooks/pipeline-inference-example.ipynb
@@ -33,13 +33,12 @@
    "source": [
     "cloud_endpoint = getpass(\"Elastic deployment Cloud Endpoint: \")\n",
     "cloud_api_key = getpass(\"Elastic deployment API Key: \")\n",
-    "INDEX_NAME = 'books-pipeline'\n",
+    "INDEX_NAME = \"books-pipeline\"\n",
     "\n",
     "es = Elasticsearch(\n",
     "    hosts=cloud_endpoint,\n",
     "    api_key=cloud_api_key,\n",
-    ")\n",
-    "\n"
+    ")"
    ]
   },
   {
@@ -150,7 +149,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_path=\"../data/books.json\"\n",
+    "file_path = \"../data/books.json\"\n",
     "with open(file_path, \"r\") as file:\n",
     "    books = json.load(file)\n",
     "\n",
@@ -205,7 +204,9 @@
     "        pipeline=\"text-embedding\",\n",
     "    )\n",
     "\n",
-    "    print(f\"Successfully indexed book: {book.get('book_title', None)} - Result: {resp.get('result', None)}\")\n",
+    "    print(\n",
+    "        f\"Successfully indexed book: {book.get('book_title', None)} - Result: {resp.get('result', None)}\"\n",
+    "    )\n",
     "\n",
     "except Exception as e:\n",
     "    print(f\"Error occurred while indexing book: {e}\")"
