--- a/supporting-blog-content/navigating-an-elastic-vector-database/notebooks/query_examples.ipynb
+++ b/supporting-blog-content/navigating-an-elastic-vector-database/notebooks/query_examples.ipynb
@@ -53,15 +53,15 @@
     "cloud_endpoint = getpass(\"Elastic deployment Cloud Endpoint: \")\n",
     "cloud_api_key = getpass(\"Elastic deployment API Key: \")\n",
     "\n",
-    "INDEX_NAME = 'books-pipeline'\n",
-    "MODEL_ID = 'sentence-transformers__msmarco-minilm-l-12-v3'\n",
+    "INDEX_NAME = \"books-pipeline\"\n",
+    "MODEL_ID = \"sentence-transformers__msmarco-minilm-l-12-v3\"\n",
     "\n",
     "es = Elasticsearch(\n",
     "    hosts=cloud_endpoint,\n",
     "    api_key=cloud_api_key,\n",
     ")\n",
     "\n",
-    "query_string = \"Dinosaurs are still alive\"\n"
+    "query_string = \"Dinosaurs are still alive\""
    ]
   },
   {
@@ -85,7 +85,7 @@
     "        print(f\"Book: {hit['_source']['book_title']}\")\n",
     "        print(f\"Author: {hit['_source']['author_name']}\")\n",
     "        print(f\"Description: {hit['_source']['book_description']}\")\n",
-    "        print(f\"Score: {hit['_score']}\\n\")\n"
+    "        print(f\"Score: {hit['_score']}\\n\")"
    ]
   },
   {
@@ -104,18 +104,18 @@
    "outputs": [],
    "source": [
     "vector_search_result = es.search(\n",
-    "        index = INDEX_NAME,\n",
-    "        knn={\n",
-    "            \"field\": \"description_embedding\",\n",
-    "            \"k\": 10,\n",
-    "            \"num_candidates\": 50,\n",
-    "            \"query_vector_builder\": {\n",
-    "                \"text_embedding\": {\"model_id\": MODEL_ID, \"model_text\": query_string}\n",
-    "            },\n",
+    "    index=INDEX_NAME,\n",
+    "    knn={\n",
+    "        \"field\": \"description_embedding\",\n",
+    "        \"k\": 10,\n",
+    "        \"num_candidates\": 50,\n",
+    "        \"query_vector_builder\": {\n",
+    "            \"text_embedding\": {\"model_id\": MODEL_ID, \"model_text\": query_string}\n",
     "        },\n",
-    "    )\n",
+    "    },\n",
+    ")\n",
     "\n",
-    "print_results(vector_search_result)\n"
+    "print_results(vector_search_result)"
    ]
   },
   {
@@ -134,19 +134,11 @@
    "outputs": [],
    "source": [
     "bm25_result = es.search(\n",
-    "        index=INDEX_NAME, \n",
-    "        body={\n",
-    "            \"query\": {\n",
-    "                \"match\": {\n",
-    "                    \"book_description\": query_string\n",
-    "                }\n",
-    "            },\n",
-    "            \"size\": 10\n",
-    "        },\n",
-    "        \n",
-    "    )\n",
+    "    index=INDEX_NAME,\n",
+    "    body={\"query\": {\"match\": {\"book_description\": query_string}}, \"size\": 10},\n",
+    ")\n",
     "\n",
-    "print_results(bm25_result)\n"
+    "print_results(bm25_result)"
    ]
   },
   {
@@ -170,8 +162,8 @@
     "        \"query\": {\n",
     "            \"bool\": {\n",
     "                \"must\": [\n",
-    "                    {\"match\": \n",
-    "                        {\n",
+    "                    {\n",
+    "                        \"match\": {\n",
     "                            \"book_description\": query_string,\n",
     "                        }\n",
     "                    },\n",
@@ -185,14 +177,12 @@
     "                \"text_embedding\": {\"model_id\": MODEL_ID, \"model_text\": query_string}\n",
     "            },\n",
     "        },\n",
-    "        \"rank\": {\n",
-    "            \"rrf\": {}\n",
-    "        },\n",
-    "        \"size\": 10\n",
+    "        \"rank\": {\"rrf\": {}},\n",
+    "        \"size\": 10,\n",
     "    },\n",
     ")\n",
     "\n",
-    "print_results(hybrid_search_result)\n"
+    "print_results(hybrid_search_result)"
    ]
   }
  ],
