--- a/supporting-blog-content/using-openelm-models/using-openelm-models.ipynb
+++ b/supporting-blog-content/using-openelm-models/using-openelm-models.ipynb
@@ -582,8 +582,7 @@
         "    prompt=prompt,\n",
         "    model=MODEL,\n",
         "    hf_access_token=HUGGINGFACE_TOKEN,\n",
-        "    generate_kwargs={\"repetition_penalty\": 1.2,\n",
-        "                     \"prompt_lookup_num_tokens\": 10},\n",
+        "    generate_kwargs={\"repetition_penalty\": 1.2, \"prompt_lookup_num_tokens\": 10},\n",
         ")\n",
         "print(\"-----GENERATION TIME-----\")\n",
         "print(f\"\\033[92m {round(generation_time, 2)} \\033[0m\")\n",
