removed colab link
removed colab link to check if that is why build is faling.

--- a/supporting-blog-content/alternative-approach-for-parsing-pdfs-in-rag/alternative-approach-for-parsing-pdfs-in-rag.ipynb
+++ b/supporting-blog-content/alternative-approach-for-parsing-pdfs-in-rag/alternative-approach-for-parsing-pdfs-in-rag.ipynb
@@ -6,8 +6,7 @@
         "id": "e9-GuDRKCz_1"
       },
       "source": [
-        "# PDF Parsing - Table Extraction\n",
-        "<a target=\"_blank\" href=\"https://colab.research.google.com/github/elastic/elasticsearch-labs/blob/main/supporting-blog-content/alternative-approach-for-parsing-pdfs-in-rag/alternative-approach-for-parsing-pdfs-in-rag.ipynb\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>\n"
+        "# PDF Parsing - Table Extraction\n"
       ]
     },
     {
@@ -16,7 +15,7 @@
         "id": "MBdflc9G0ICc"
       },
       "source": [
-        "##Objective\n",
+        "## Objective\n",
         "This Python script extracts text and tables from a PDF file, converts the tables into a human-readable text format using Azure OpenAI, and writes the processed content to a text file. The script uses pdfplumber to extract text and table data from each page of the PDF. For tables, it sends a cleaned version (handling any missing or None values) to Azure OpenAI, which generates a natural language summary of the table. The extracted non-table text and the summarized table text are then saved to a text file for easy search and readability."
       ]
     },
