--- a/notebooks/langchain/multi-query-retriever-examples/langchain-multi-query-retriever.ipynb
+++ b/notebooks/langchain/multi-query-retriever-examples/langchain-multi-query-retriever.ipynb
@@ -38,7 +38,7 @@
     }
    ],
    "source": [
-    "!python3 -m pip install -qU lark langchain langchain-elasticsearh langchain_openai tiktoken\n",
+    "!python3 -m pip install -qU lark langchain langchain-elasticsearch langchain_openai tiktoken\n",
     "\n",
     "from langchain.schema import Document\n",
     "from langchain_openai.embeddings import OpenAIEmbeddings\n",
