--- a/supporting-blog-content/alternative-approach-for-parsing-pdfs-in-rag/alternative-approach-for-parsing-pdfs-in-rag.ipynb
+++ b/supporting-blog-content/alternative-approach-for-parsing-pdfs-in-rag/alternative-approach-for-parsing-pdfs-in-rag.ipynb
@@ -56,13 +56,17 @@
     "import io  # To create an in-memory file-like object\n",
     "import os\n",
     "\n",
-    "\n",
+    "# Endpoint example\n",
+    "# https://my-deploymet.openai.azure.com/openai/deployments/gpt-4o-global/chat/completions?api-version=2024-08-01-preview\n",
     "ENDPOINT = getpass(\"Azure OpenAI Completions Endpoint: \")\n",
     "\n",
     "API_KEY = getpass(\"Azure OpenAI API Key: \")\n",
     "\n",
+    "\n",
+    "##Directory where parsed output file will be written to\n",
     "PARSED_PDF_DIRECTORY = getpass(\"Output directory for parsed PDF: \")\n",
     "\n",
+    "##Name of output parsed file\n",
     "PARSED_PDF_FILE_NAME = getpass(\"PARSED PDF File Name: \")\n",
     "\n",
     "\n",
